# MemTestX

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
fmc_memory_adapter/: fmc_memory_adapter.kicad_pcb  fmc_memory_adapter.kicad_sch
fmc_memory_adapter/footprints/adapter_stm32_left/: STM32F429_Pinheader_left.kicad_sym
fmc_memory_adapter/footprints/adapter_stm32_right/: STM32F429_Pinheader_right.kicad_sym
hardware/fpga_design/: README.md
hardware/fpga_design/block_designes/: axi_verification.tcl  axi_verifier_full.tcl  main_block_design.tcl
hardware/fpga_design/constraints/: constraints.xdc
hardware/fpga_design/ips/: .edit_ps_pl_interface_v1_0.xpr.swp  edit_ps_pl_interface_v1_0.xpr
hardware/fpga_design/scripts/: create_bitstream.sh  create_project.sh  create_project.tcl  export_platform.sh  flash_board.sh  generate_bitstream.sh  run_simulation.sh
hardware/fpga_design/sim/: tb_axi_full.sv  tb_axi_interface.sv  tb_gmii.v  tb_mdio.v  tb_memory_read.sv  tb_memory_write.sv  tb_puf_execution_latency.sv  tb_rgmii.v
hardware/fpga_design/src/: SGMIICore.v  gmii.v  ip_core_controller.v  irq_tester.v  mdio.v  memory_read_top_module.v  memory_write_top_module.v  multiplexer.v  ps_pl_trigger.v  ps_pl_trigger_old.v  puf_controller.v  read_sram_protocol.v  read_starter.v  reset_handler.v  rgmii_controller.v  test.v  thousand_base_x_pcs_pma.v  writer.v
hardware/pcbs/fmc_memory_adapter/: README.md  fmc_memory_adapter.kicad_pro  fmc_memory_adapter.kicad_sch  fp-lib-table  sym-lib-table
hardware/pcbs/memory_template/: Adapter_Template_Rohm_FRAM.kicad_pcb  Adapter_Template_Rohm_FRAM.kicad_pro  Adapter_Template_Rohm_FRAM.kicad_sch  README.md  fp-lib-table  sym-lib-table
pcbs/footprints/custom_footprints.pretty/: SAMTEC_ASP-134488-02.kicad_mod
pcbs/footprints/samtec_vita57_1_fmc/: readme-and-terms-of-use-3d-cad-models.txt
pcbs/mechanical_support/: pcb_mechanical_support.stl
scripts/: setup_and_run_environment.sh
software/: README.md
software/experiment_scheduler/: README.md  main.py  requirements.txt  run_all.bash  run_microservice.bash  setup_db.bash
software/experiment_scheduler/config_files/: config.json  general.json  measure_device.json  micro_service_config.json
software/experiment_scheduler/evaluation/: db_utils.py  defines.py  evaluation_script.ipynb  evaluation_scripts.py  evaluation_utils.py  platform_timing.py  utils.py  visualization.py
software/experiment_scheduler/samples/: sample_experiment_voltage_variations_mram.yaml  sample_experiment_write_latency.yaml  sample_experiment_write_latency_fram_lapis.yaml
software/experiment_scheduler/scripts/: run.sh  setup.sh
software/experiment_scheduler/src/: db_handler.py
software/experiment_scheduler/tests/: measurement_endpoint_simulator.py
software/experiment_scheduler/tools/: db_merger.py
software/ps_software/: README.md  build.sh
software/ps_software/memory_controller/: CMakeLists.txt
software/ps_software/memory_controller/src/: axi_protocol.c  axi_protocol.h  data_parser.c  data_parser.h  ip_handler.c  ip_handler.h  irq_handler.c  irq_handler.h  json_parser.c  json_parser.h  logging.c  logging.h  main.c  receive_buffer.c  receive_buffer.h
software/ps_software/memory_controller/src/board_support/: platform.c  platform_mb.c  platform_ppc.c  platform_zynq.c  platform_zynqmp.c
software/ps_software/memory_controller/src/config/: app_config.c  app_config.h
software/ps_software/memory_controller/toolchain/: xilinx_cortex_a53.cmake
software/ps_software/scripts/: build.sh  flash_ps.sh
software/test_scheduler/scripts/: run.sh  setup.sh
test_scheduler/: Test_Execution.ipynb  requirements.txt  start_microservice.py  tests.db
test_scheduler/src/: db_handler.py
test_scheduler/src/communication_interfaces/: interface_wrapper.py  ip_definitions.py  measure_device_wrapper.py  network_handler.py  serial_handler.py
test_scheduler/src/evaluation/: db_utils.py  defines.py  utils.py  (+2 more)
test_scheduler/tests/: FRAM_Cypress_FM22L16_55_TG_BK.json  test_execution_tester.py
(+203 files in other folders)
